ajustes no report

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 
 
 	<build>
+		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
@@ -36,7 +38,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<jvmTarget>1.8</jvmTarget>
+					<jvmTarget>11</jvmTarget>
 				</configuration>
 			</plugin>
 			<plugin>
