--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd
+http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.southsystem</groupId>
 	<artifactId>Southsystem</artifactId>
@@ -14,8 +16,6 @@
 
 
 	<build>
-		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
@@ -38,7 +38,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<jvmTarget>11</jvmTarget>
+					<jvmTarget>1.8</jvmTarget>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -148,6 +148,11 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<version>${kotlin.version}</version>
 		</dependency>
 	</dependencies>
 
