--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/java/qa/reinaldo/</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
@@ -82,9 +88,9 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			<plugin>
 				<groupId>io.qameta.allure</groupId>
 				<artifactId>allure-maven</artifactId>
-				<version>2.10.0</version>
+				<version>2.15.2</version>
 				<configuration>
-					<reportVersion>2.8.0</reportVersion>
+					<reportVersion>2.30.0</reportVersion>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -123,10 +129,11 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-maven</artifactId>
-			<version>2.10.0</version>
+			<version>2.15.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
